--- a/utils/antDesignStyles.less
+++ b/utils/antDesignStyles.less
@@ -1,6 +1,59 @@
 // antdstyles.less file
 @import "~antd/dist/antd.less";
 
+@font-face {
+  src: url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+  font-family: 'Quicksand', cursive;
+}
+
+* {
+  font-family: 'Quicksand', cursive;
+}
+
+.footer .credit {
+  width: 100%;
+  height: 100px;
+  border-top: 5px solid #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: black;
+  color: #fff;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.footer .footer-content {
+  padding: 36px;
+  width: 100%;
+  display: flex;
+  background: black;
+  color: #fff;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.menu-footer {
+  list-style: none;
+  padding-left: 0;
+}
+
+.menu-footer li {
+  margin-bottom: 4px;
+}
+
+.menu-footer li a {
+  color: #fff;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.menu-footer li a:hover {
+  color: goldenrod;
+  font-weight: 500;
+  font-size: 16px;
+}
+
 @primary-color: #000; // primary color for all components
 @link-color: #1890ff; // link color
 @success-color: #52c41a; // success state color
