cursive to sans-serif

--- a/utils/antDesignStyles.less
+++ b/utils/antDesignStyles.less
@@ -3,11 +3,11 @@
 
 @font-face {
   src: url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
-  font-family: "Quicksand", cursive;
+  font-family: "Quicksand", sans-serif;
 }
 
 * {
-  font-family: "Quicksand", cursive;
+  font-family: "Quicksand", sans-serif;
 }
 
 .footer .credit {
