--- a/utils/antDesignStyles.less
+++ b/utils/antDesignStyles.less
@@ -17,7 +17,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: black;
+  background: rgb(17, 34, 54);
   color: #fff;
   font-weight: 500;
   font-size: 16px;
@@ -27,7 +27,7 @@
   padding: 36px;
   width: 100%;
   display: flex;
-  background: black;
+  background: rgb(17, 34, 54);
   color: #fff;
   font-weight: 500;
   font-size: 16px;
