--- a/utils/antDesignStyles.less
+++ b/utils/antDesignStyles.less
@@ -124,6 +124,25 @@
   }
 }
 
+.banner-lilia {
+  width: 88%;
+  border-radius: 8px;
+}
+
+.title-banner {
+  // margin-top: 72px;
+  // margin-bottom: 72px;
+  // height: max-content;
+
+  height: auto;
+  width: 100%;
+}
+
+.lia-logo-ini {
+  position: relative;
+  width: 80%;
+}
+
 @primary-color: #000; // primary color for all components
 @link-color: #1890ff; // link color
 @success-color: #52c41a; // success state color
